<resources>
    <string name="app_name">Weather App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Main Fragment</string>
    <string name="second_fragment_label">Cities Fragment</string>
    <string name="city_details_fragment_label">City Details Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="refresh">Refresh List</string>
    <string name="toggle">Toggle Degrees</string>
    <string name="list">List Screen</string>
    <string name="restore">Restore</string>
    <string name="current_details">Current Details</string>
    <string name="hourly">Hourly</string>
</resources>