<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.itzikpich.weatherapp.MainActivity">
    <item
        android:id="@+id/action_list"
        android:orderInCategory="100"
        android:icon="@drawable/ic_view_list"
        android:title="@string/list"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_restore"
        android:orderInCategory="100"
        android:title="@string/restore"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_toggle"
        android:orderInCategory="100"
        android:icon="@drawable/ic_change"
        android:title="@string/toggle"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:icon="@drawable/ic_refresh"
        android:title="@string/refresh"
        app:showAsAction="always" />
</menu>