<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.itzikpich.weatherapp.HomeFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.itzikpich.weatherapp.CitiesFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_cities">

        <action
            android:id="@+id/action_CitiesFragment_to_CityDetailsFragment"
            app:destination="@id/CityDetailsFragment" />

    </fragment>
    <fragment
        android:id="@+id/CityDetailsFragment"
        android:name="com.itzikpich.weatherapp.CityDetailsFragment"
        android:label="@string/city_details_fragment_label"
        tools:layout="@layout/fragment_city_details">

    </fragment>
</navigation>